@startuml

title __SERVLET's Class Diagram__\n

  package  {
    package servlet {
      class AddMobilePhoneServlet {
          {static} - serialVersionUID : long
          + AddMobilePhoneServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class DeleteMobilePhoneServlet {
          {static} - serialVersionUID : long
          + DeleteMobilePhoneServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class HomePageServlet {
          {static} - serialVersionUID : long
          + HomePageServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class LoginServlet {
          {static} - serialVersionUID : long
          + LoginServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class ManageMobilePhoneServlet {
          {static} - serialVersionUID : long
          + ManageMobilePhoneServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class ManageOrderServlet {
          {static} - serialVersionUID : long
          + ManageOrderServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class UpdateMobilePhoneInfoServlet {
          {static} - serialVersionUID : long
          + UpdateMobilePhoneInfoServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class ViewMobilePhonesServlet {
          {static} - serialVersionUID : long
          + ViewMobilePhonesServlet()
          # doGet()
      }
    }
  }
  

  AddMobilePhoneServlet -up-|> HttpServlet
  DeleteMobilePhoneServlet -up-|> HttpServlet
  HomePageServlet -up-|> HttpServlet
  LoginServlet -up-|> HttpServlet
  ManageMobilePhoneServlet -up-|> HttpServlet
  ManageOrderServlet -up-|> HttpServlet
  UpdateMobilePhoneInfoServlet -up-|> HttpServlet
  ViewMobilePhonesServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
